Running apache as $USER_CREATE

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,8 @@
 nodaemon=true
 
 [program:apache2]
-command=/apache-run.sh
+command=/usr/bin/pidproxy /var/run/apache2/apache2.pid /bin/bash -c "source /etc/apache2/envvars && /usr/sbin/apache2 -DFOREGROUND"
+redirect_stderr=true
 
 [program:sshd]
 command=/usr/sbin/sshd -D
